clusters/hybrid01/config/firefly-iii/firefly-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: firefly
  labels:
    pod-security.kubernetes.io/enforce: privileged
    goldilocks.fairwinds.com/enabled: "true"
