clusters/hybrid01/config/firefly-iii/firefly-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly
  namespace: firefly
  labels:
    app: firefly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firefly
  template:
    metadata:
      labels:
        app: firefly
    spec:
      containers:
        - name: firefly
          image: fireflyiii/core:version-6.1.16
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
