clusters/hybrid01/config/firefly-iii/firefly-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: firefly
  namespace: firefly
  labels:
    app: firefly
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: firefly
