clusters/hybrid01/config/firefly-iii/firefly-authpolicy-allowed.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: firefly-authelia-policy-allowed
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: gateway 
  action: ALLOW
  rules:
  - to:
    - operation:
        paths: ["/api/v1/cron"]
